# dicegame

./: .gitignore  CHANGELOG.md  LICENSE  README.md  git_ssh  git_ssh.pub  pyproject.toml
dicegame/: __main__.py  version.py
dicegame/cli/: dispatcher.py  interactive.py  interactive_dispatcher.py  parser.py
dicegame/commands/: auth.py  auth_interactive.py  auth_non_interactive.py  delete_player.py  delete_user.py  dice_roll.py  dice_roll_interactive.py  leaderboard.py  leaderboard_interactive.py  logs.py  player_delete.py  report_bug.py  view_interactive.py
dicegame/db/: connection.py  queries.py  queries_interactive.py  schema.py
dicegame/logging/: config.py
dicegame/services/: auth.py  delete_player_service.py  delete_user_service.py  dice_roll.py  leaderboard.py  log_service.py  player_delete_service.py  report_bug_service.py  view.py
dicegame/session/: session.py  session_disk.py
dicegame/tests/: test_cli.py  test_utils.py
dicegame/utils/: auth.py  common_utils.py  dice_roll_utils.py  errors.py  logging.py  paths.py  security.py
dicegame/utils/rich_pkg/: console.py  progress.py
docs/: repository_audit_V2_v0.7.4.md  repository_audit_v0.7.4.md
