[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dicegame"
version = "0.7.0"
description = "A simple CLI dice game"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Dennis Major",email = 'dennismajor0@gmail.com'}
]

maintainers = [
    { name = "Dennis Major",email = "dennismajor0@gmail.com"}
]


classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console"
]

keywords = ["game", "dice", "cli", "python"]

dependencies = [
    "argon2-cffi>=23.1.0",
    "rich>=13.3"        # for console output
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0"
]

[project.scripts]
dicegame = "dicegame.__main__:main"
